src/setup/snapshots/toker__setup__wizard__tests__picker_timer.snap
---
source: src/setup/wizard.rs
expression: unit
---
[Unit]
Description=toker picker timer (refreshes Claude Code's openrouter /model rows daily)

[Timer]
OnCalendar=daily
RandomizedDelaySec=1h
Persistent=true

[Install]
WantedBy=timers.target
